Crash on linking animation data (drivers) on overridden objects #110053

Closed
opened 2023-07-13 12:21:32 +02:00 by Albert-OShea · 2 comments

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 517.48

Blender Version
Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-07-12 23:36, hash: 5f7e07e05321
Worked: (newest version of Blender that worked as expected)

Short description of error
Blender crashes if an overridden object has its animation linked to another object with a driver.

Exact steps for others to reproduce the error

  • Download both attached blend files
  • open linking.blend (The two objects needed to test are already selected: Suzanne and Cone)
  • press Ctrl + L > Link Animation Data.
  • Select the cube,
  • press g to move it.

Blender crashes.
The way I set up the test blend files:
source.blend: contains the collection being linked and overridden by linking.blend
linking.blend: the cube's Z position is a driver for Suzanne's Z position

**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 517.48 **Blender Version** Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-07-12 23:36, hash: `5f7e07e05321` Worked: (newest version of Blender that worked as expected) **Short description of error** Blender crashes if an overridden object has its animation linked to another object with a driver. **Exact steps for others to reproduce the error** - Download both attached blend files - open linking.blend (The two objects needed to test are already selected: Suzanne and Cone) - press Ctrl + L > `Link Animation Data`. - Select the cube, - press g to move it. Blender crashes. The way I set up the test blend files: **source.blend:** contains the collection being linked and overridden by linking.blend **linking.blend:** the cube's Z position is a driver for Suzanne's Z position
Albert-OShea added the
Type
Report
Status
Needs Triage
Priority
Normal
labels 2023-07-13 12:21:32 +02:00

Thanks for the report, I can confirm crash.
I edited the steps to be a little clearer.

Thanks for the report, I can confirm crash. I edited the steps to be a little clearer.
Sybren A. Stüvel added this to the Animation & Rigging project 2023-08-03 11:28:53 +02:00

also broken in 3.6.1

also broken in 3.6.1
Christoph Lendenfeld self-assigned this 2023-08-04 14:44:38 +02:00
Christoph Lendenfeld added
Type
Bug
and removed
Type
Report
labels 2023-08-11 16:41:27 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-08-18 09:18:07 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#110053
No description provided.